[gd_scene load_steps=8 format=3 uid="uid://bm2svkssvjhig"]

[ext_resource type="Theme" uid="uid://wknpxv3x21lw" path="res://resources/thm_main_ui.tres" id="1_kw7h8"]
[ext_resource type="Script" path="res://scenes/gui/scr_overworld_menu.gd" id="2_2efj7"]
[ext_resource type="Texture2D" uid="uid://cvy1i8jmiqbbb" path="res://sprites/characters/portraits/spr_portrait_greg.png" id="3_cuvke"]
[ext_resource type="Script" path="res://scenes/tech/scr_reference_button.gd" id="3_srch7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v7huo"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d2jl4"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.384314, 0.384314, 0.427451, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mf5e4"]
bg_color = Color(0, 0, 0, 1)
expand_margin_top = 1.0

[node name="OverworldMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kw7h8")
script = ExtResource("2_2efj7")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 160.0
offset_bottom = 120.0
color = Color(0, 0.270588, 0.270588, 0.105882)
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 153.0
offset_bottom = 113.0
metadata/_edit_lock_ = true

[node name="TabContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = -7.0
offset_right = 146.0
offset_bottom = 1.0
theme_override_constants/separation = -1

[node name="Tab1" type="Panel" parent="Panel/TabContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v7huo")

[node name="Name" type="Label" parent="Panel/TabContainer/Tab1"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 46.0
offset_bottom = 13.0
text = "name"
clip_text = true

[node name="Tab2" type="Panel" parent="Panel/TabContainer"]
z_index = -1
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v7huo")

[node name="Name" type="Label" parent="Panel/TabContainer/Tab2"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 46.0
offset_bottom = 13.0
text = "name"
clip_text = true

[node name="Tab3" type="Panel" parent="Panel/TabContainer"]
z_index = -1
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v7huo")

[node name="Name" type="Label" parent="Panel/TabContainer/Tab3"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 46.0
offset_bottom = 13.0
text = "name"
clip_text = true

[node name="InfoPanel" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 70.0
offset_bottom = 102.0

[node name="MemberInfo" type="Control" parent="Panel/InfoPanel"]
anchors_preset = 0
offset_right = 66.0
offset_bottom = 98.0

[node name="Portrait" type="TextureRect" parent="Panel/InfoPanel/MemberInfo"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 24.0
offset_bottom = 2.0
texture = ExtResource("3_cuvke")
expand_mode = 3
stretch_mode = 2

[node name="MainInfoText" type="RichTextLabel" parent="Panel/InfoPanel/MemberInfo"]
layout_mode = 0
offset_left = 3.0
offset_top = 26.0
offset_right = 60.0
offset_bottom = 96.0
bbcode_enabled = true
text = "lvl: 1
exp: 0

atk: 1
def: 1
spd: 1

hp: 100/100
sp: 30/30"
scroll_active = false
shortcut_keys_enabled = false

[node name="ItemSpiritTabs" type="TabContainer" parent="Panel"]
modulate = Color(0.533333, 0.533333, 0.533333, 1)
layout_mode = 0
offset_left = 71.0
offset_top = 3.0
offset_right = 144.0
offset_bottom = 104.0
theme_override_styles/panel = SubResource("StyleBoxFlat_d2jl4")
tab_alignment = 1

[node name="items" type="Panel" parent="Panel/ItemSpiritTabs"]
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="Panel/ItemSpiritTabs/items"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 69.0
offset_bottom = 67.0
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="ItemsContainer" type="VBoxContainer" parent="Panel/ItemSpiritTabs/items/Scroll"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="SilverCounterLabel" type="Label" parent="Panel/ItemSpiritTabs/items"]
layout_mode = 0
offset_left = 2.0
offset_top = 70.0
offset_right = 66.0
offset_bottom = 92.0
text = "party silver:
35"

[node name="ColorRect" type="ColorRect" parent="Panel/ItemSpiritTabs/items"]
layout_mode = 0
offset_left = 1.0
offset_top = 67.0
offset_right = 70.0
offset_bottom = 68.0

[node name="spirits" type="Panel" parent="Panel/ItemSpiritTabs"]
visible = false
layout_mode = 2

[node name="UsedSpiritsPanel" type="Panel" parent="Panel/ItemSpiritTabs/spirits"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 69.0
offset_bottom = 45.0

[node name="Scroll" type="ScrollContainer" parent="Panel/ItemSpiritTabs/spirits/UsedSpiritsPanel"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 66.0
offset_bottom = 42.0
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="UsedSpiritContainer" type="VBoxContainer" parent="Panel/ItemSpiritTabs/spirits/UsedSpiritsPanel/Scroll"]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="UnusedSpiritsPanel" type="Panel" parent="Panel/ItemSpiritTabs/spirits"]
layout_mode = 0
offset_left = 2.0
offset_top = 46.0
offset_right = 69.0
offset_bottom = 88.0

[node name="Scroll" type="ScrollContainer" parent="Panel/ItemSpiritTabs/spirits/UnusedSpiritsPanel"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 66.0
offset_bottom = 41.0
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="UnusedSpiritContainer" type="VBoxContainer" parent="Panel/ItemSpiritTabs/spirits/UnusedSpiritsPanel/Scroll"]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="ReferenceButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_right = 22.0
offset_bottom = 13.0
mouse_filter = 2
text = "greg"
flat = true
alignment = 0
script = ExtResource("3_srch7")

[node name="UsingMenu" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 160.0
offset_bottom = 120.0
color = Color(0, 0.270588, 0.270588, 0.105882)
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="UsingMenu"]
layout_mode = 0
offset_left = 16.0
offset_top = 26.0
offset_right = 144.0
offset_bottom = 37.0
theme_override_styles/normal = SubResource("StyleBoxFlat_mf5e4")
text = "using"

[node name="Panel" type="Panel" parent="UsingMenu"]
layout_mode = 0
offset_left = 16.0
offset_top = 33.0
offset_right = 144.0
offset_bottom = 73.0

[node name="Portraits" type="HBoxContainer" parent="UsingMenu/Panel"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 127.0
offset_bottom = 40.0
theme_override_constants/separation = 10
alignment = 1

[node name="Portrait" type="TextureRect" parent="UsingMenu/Panel/Portraits"]
layout_mode = 2
texture = ExtResource("3_cuvke")
stretch_mode = 3

[node name="Portrait2" type="TextureRect" parent="UsingMenu/Panel/Portraits"]
layout_mode = 2
texture = ExtResource("3_cuvke")
stretch_mode = 3

[node name="Portrait3" type="TextureRect" parent="UsingMenu/Panel/Portraits"]
layout_mode = 2
texture = ExtResource("3_cuvke")
stretch_mode = 3
